--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,8 @@
     "react-router-dom": "^6.26.2",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
